--- a/views/reportes/filtrosProduccionPlaza.twig
+++ b/views/reportes/filtrosProduccionPlaza.twig
@@ -8,9 +8,9 @@
 				<div class="col-sm-3">
 					<b>Zona</b> <br>
 					<div class="input-group">
-						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
+						<select class="form-control select2" name="zona_cliente[]" id="zona_cliente" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in zona_cliente" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
@@ -65,6 +65,7 @@
                     horas: {{ horas|raw }},
                     minutos: {{ minutos|raw }},
                     canal_usuario: {{ canal_usuario|raw }},
+					zona_cliente: {{ zona_cliente|raw }},
                 },
                 methods: {},
             });
