filtros base general

--- a/views/reportes/gestionesPorHora.twig
+++ b/views/reportes/gestionesPorHora.twig
@@ -168,6 +168,26 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#resultado").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#accion").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#descripcion").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#motivo_no_pago").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#descripcion_no_pago").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         // self.consultar();
                     });
                     $('.select2').select2({
