--- a/views/reportes/filtrosBaseGeneral.twig
+++ b/views/reportes/filtrosBaseGeneral.twig
@@ -56,6 +56,46 @@
 				</div>
 
 				<div class="col-sm-3">
+					<b>Resultado</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="resultado[]" id="resultado" multiple>
+							<option value=""></option>
+							<option v-for="item in resultado" v-bind:value="item.nivel1_id" v-html="item.nivel1"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Acción</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="accion[]" id="accion" multiple>
+							<option value=""></option>
+							<option v-for="item in accion" v-bind:value="item.nivel2_id" v-html="item.nivel2"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Descripción</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="descripcion[]" id="descripcion" multiple>
+							<option value=""></option>
+							<option v-for="item in descripcion" v-bind:value="item.nivel3_id" v-html="item.nivel3"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
+					<b>Gestor</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="gestor[]" id="gestor" multiple>
+							<option value=""></option>
+							<option v-for="item in gestor" v-bind:value="item.id" v-html="item.name"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
@@ -100,6 +140,12 @@
 					campana_usuario: {{ campana_usuario|raw }},
 					marca: {{ marca|raw }},
 					ciclo_asignacion: {{ ciclo_asignacion|raw }},
+					resultado: {{ resultado|raw }},
+					accion: {{ accion|raw }},
+					descripcion: {{ descripcion|raw }},
+					motivo_no_pago: {{ motivo_no_pago|raw }},
+					descripcion_no_pago: {{ descripcion_no_pago|raw }},
+					gestor: {{ gestor|raw }},
                 },
                 methods: {},
             });
