--- a/views/reportes/filtrosGestionesPorHora.twig
+++ b/views/reportes/filtrosGestionesPorHora.twig
@@ -106,6 +106,16 @@
 				</div>
 
 				<div class="col-sm-3">
+					<b>Gestor</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="gestor[]" id="gestor" multiple>
+							<option value=""></option>
+							<option v-for="item in gestor" v-bind:value="item.id" v-html="item.name"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
 					<b>Fecha Inicio</b> <br>
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
 					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">
@@ -155,6 +165,7 @@
 					descripcion: {{ descripcion|raw }},
 					motivo_no_pago: {{ motivo_no_pago|raw }},
 					descripcion_no_pago: {{ descripcion_no_pago|raw }},
+					gestor: {{ gestor|raw }},
                 },
                 methods: {},
             });
