--- a/views/reportes/gestionesPorHora.twig
+++ b/views/reportes/gestionesPorHora.twig
@@ -188,6 +188,10 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#gestor").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         // self.consultar();
                     });
                     $('.select2').select2({
