--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1182,7 +1182,7 @@
                                                 <tr>
                                                     <td><strong>LUGAR DE TRABAJO</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_diners.lugar_trabajo"></span>
+                                                                v-html="cliente.lugar_trabajo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -1759,7 +1759,7 @@
                                                 <tr>
                                                     <td><strong>LUGAR DE TRABAJO</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_interdin.lugar_trabajo"></span>
+                                                                v-html="cliente.lugar_trabajo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -2326,7 +2326,7 @@
                                                 <tr>
                                                     <td><strong>LUGAR DE TRABAJO</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_discover.lugar_trabajo"></span>
+                                                                v-html="cliente.lugar_trabajo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -2893,7 +2893,7 @@
                                                 <tr>
                                                     <td><strong>LUGAR DE TRABAJO</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_mastercard.lugar_trabajo"></span>
+                                                                v-html="cliente.lugar_trabajo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
