--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -358,7 +358,7 @@
                             <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
                             <div class="col-md-4 col-informacion">
                                 <input type="text" class="form-control fecha" id="fecha_compromiso_pago"
-                                       name="fecha_compromiso_pago">
+                                       name="fecha_compromiso_pago" readonly>
                             </div>
 
                             <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
@@ -484,7 +484,7 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_diners" name="fecha_compromiso_pago_diners">
+                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_diners" name="fecha_compromiso_pago_diners" readonly>
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
@@ -609,7 +609,7 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_interdin" name="fecha_compromiso_pago_interdin">
+                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_interdin" name="fecha_compromiso_pago_interdin" readonly>
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
@@ -734,7 +734,7 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_discover" name="fecha_compromiso_pago_discover">
+                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_discover" name="fecha_compromiso_pago_discover" readonly>
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
@@ -859,7 +859,7 @@
                             <div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
                                 <div class="col-md-4 col-informacion">
-                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_mastercard" name="fecha_compromiso_pago_mastercard">
+                                    <input type="text" class="form-control fecha" id="fecha_compromiso_pago_mastercard" name="fecha_compromiso_pago_mastercard" readonly>
                                 </div>
 
                                 <label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
