--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1209,7 +1209,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td><strong>FECHA DE COMPROMISO</strong></td>
-                                                    <td>
+                                                    <td colspan="3">
                                                         <span v-html="aplicativo_diners_tarjeta_diners.fecha_compromiso"></span>
                                                     </td>
                                                 </tr>
@@ -1783,7 +1783,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td><strong>FECHA DE COMPROMISO</strong></td>
-                                                    <td>
+                                                    <td colspan="3">
                                                         <span v-html="aplicativo_diners_tarjeta_interdin.fecha_compromiso"></span>
                                                     </td>
                                                 </tr>
@@ -2346,7 +2346,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td><strong>FECHA DE COMPROMISO</strong></td>
-                                                    <td>
+                                                    <td colspan="3">
                                                         <span v-html="aplicativo_diners_tarjeta_discover.fecha_compromiso"></span>
                                                     </td>
                                                 </tr>
@@ -2909,7 +2909,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td><strong>FECHA DE COMPROMISO</strong></td>
-                                                    <td>
+                                                    <td colspan="3">
                                                         <span v-html="aplicativo_diners_tarjeta_mastercard.fecha_compromiso"></span>
                                                     </td>
                                                 </tr>
