--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -4140,45 +4140,45 @@
                 });
 
                 var maxchars = 226;
-                $('#observaciones').keyup(function () {
-                    var tlength = $(this).val().length;
-                    $(this).val($(this).val().substring(0, maxchars));
-                    var tlength = $(this).val().length;
-                    remain = maxchars - parseInt(tlength);
-                    $('#remain').text(remain);
-                });
-
-                $('#observaciones_diners').keyup(function () {
-                    var tlength = $(this).val().length;
-                    $(this).val($(this).val().substring(0, maxchars));
-                    var tlength = $(this).val().length;
-                    remain = maxchars - parseInt(tlength);
-                    $('#remain_diners').text(remain);
-                });
-
-                $('#observaciones_interdin').keyup(function () {
-                    var tlength = $(this).val().length;
-                    $(this).val($(this).val().substring(0, maxchars));
-                    var tlength = $(this).val().length;
-                    remain = maxchars - parseInt(tlength);
-                    $('#remain_interdin').text(remain);
-                });
-
-                $('#observaciones_discover').keyup(function () {
-                    var tlength = $(this).val().length;
-                    $(this).val($(this).val().substring(0, maxchars));
-                    var tlength = $(this).val().length;
-                    remain = maxchars - parseInt(tlength);
-                    $('#remain_discover').text(remain);
-                });
-
-                $('#observaciones_mastercard').keyup(function () {
-                    var tlength = $(this).val().length;
-                    $(this).val($(this).val().substring(0, maxchars));
-                    var tlength = $(this).val().length;
-                    remain = maxchars - parseInt(tlength);
-                    $('#remain_mastercard').text(remain);
-                });
+                // $('#observaciones').keyup(function () {
+                //     var tlength = $(this).val().length;
+                //     $(this).val($(this).val().substring(0, maxchars));
+                //     var tlength = $(this).val().length;
+                //     remain = maxchars - parseInt(tlength);
+                //     $('#remain').text(remain);
+                // });
+                //
+                // $('#observaciones_diners').keyup(function () {
+                //     var tlength = $(this).val().length;
+                //     $(this).val($(this).val().substring(0, maxchars));
+                //     var tlength = $(this).val().length;
+                //     remain = maxchars - parseInt(tlength);
+                //     $('#remain_diners').text(remain);
+                // });
+                //
+                // $('#observaciones_interdin').keyup(function () {
+                //     var tlength = $(this).val().length;
+                //     $(this).val($(this).val().substring(0, maxchars));
+                //     var tlength = $(this).val().length;
+                //     remain = maxchars - parseInt(tlength);
+                //     $('#remain_interdin').text(remain);
+                // });
+                //
+                // $('#observaciones_discover').keyup(function () {
+                //     var tlength = $(this).val().length;
+                //     $(this).val($(this).val().substring(0, maxchars));
+                //     var tlength = $(this).val().length;
+                //     remain = maxchars - parseInt(tlength);
+                //     $('#remain_discover').text(remain);
+                // });
+                //
+                // $('#observaciones_mastercard').keyup(function () {
+                //     var tlength = $(this).val().length;
+                //     $(this).val($(this).val().substring(0, maxchars));
+                //     var tlength = $(this).val().length;
+                //     remain = maxchars - parseInt(tlength);
+                //     $('#remain_mastercard').text(remain);
+                // });
 
                 $(function () {
                     $('#fecha_compromiso_pago').datepicker({
