--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -423,7 +423,7 @@
                         <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
                                   v-model="seguimiento.observaciones" id="observaciones" required v-autoname></textarea>
-                            <span id="remain">226</span> caracteres restantes. Valor predeterminado: MEGACOB {{ "now"|date("Y")}}{{ "now"|date("m")}}{{ "now"|date("d")}} 0999999999
+                            <!--<span id="remain">226</span> caracteres restantes.---> Valor predeterminado: MEGACOB {{ "now"|date("Y")}}{{ "now"|date("m")}}{{ "now"|date("d")}} 0999999999
                         </div>
                     </div>
                     <div class="row mb-4 seguimiento_general">
@@ -548,7 +548,7 @@
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
                                       v-model="seguimiento_diners.observaciones" id="observaciones_diners" v-autoname></textarea>
-                                <span id="remain_diners">226</span> caracteres restantes.
+                            <!--<span id="remain_diners">226</span> caracteres restantes.-->
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -673,7 +673,7 @@
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
                                       v-model="seguimiento_interdin.observaciones" id="observaciones_interdin" v-autoname></textarea>
-                                <span id="remain_interdin">226</span> caracteres restantes.
+                            <!--<span id="remain_interdin">226</span> caracteres restantes.-->
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -798,7 +798,7 @@
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
                                       v-model="seguimiento_discover.observaciones" id="observaciones_discover" v-autoname></textarea>
-                                <span id="remain_discover">226</span> caracteres restantes.
+                            <!--<span id="remain_discover">226</span> caracteres restantes.-->
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -923,7 +923,7 @@
                             <div class="col-md-4 col-informacion">
 						    <textarea rows="3" class="form-control specialChar" placeholder="Observaciones"
                                       v-model="seguimiento_mastercard.observaciones" id="observaciones_mastercard" v-autoname></textarea>
-                                <span id="remain_mastercard">226</span> caracteres restantes.
+                            <!--<span id="remain_mastercard">226</span> caracteres restantes.-->
                             </div>
                         </div>
                         <div class="row mb-4">
